--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="搜索引擎聚合:"/>
 
 <!--网站favicon可以没有或者改为自己的-->
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.png"/>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
 
 <!--CSS 若不需要变动样式不用改-->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/zui/1.8.1/css/zui.min.css" rel="stylesheet" type="text/css"/>
