--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ input::-webkit-input-placeholder {
 <div class="main">
     <div style="text-align: center;">
         <h1>
-            <img src="android-chrome-192x192.png" alt="Icon" style="vertical-align: middle;">
+            <span><img src="favicon.ico" alt="Icon" style="vertical-align: middle;"></span>
             <span>JKSearch</span>
         </h1>
     </div>
