--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ input::-webkit-input-placeholder {
 <div class="main">
     <div style="text-align: center;">
         <h1>
-            <span><img src="favicon.ico" alt="Icon" style="vertical-align: middle;"></span>
+            <span><img src="https://cdn.jsdelivr.net/gh/darkqiank/img_bed@master/catflix_img/favicon.ico" alt="Icon" style="vertical-align: middle;"></span>
             <span>JKSearch</span>
         </h1>
     </div>
