--- a/index.html
+++ b/index.html
@@ -741,6 +741,10 @@ input::-webkit-input-placeholder {
             <section class="item card-box" id="row-00">
             <div class="container-fluid">
                 <div class="row">
+                    <div class="url-input-container">
+                        <input id="goto_url_input" type="text" class="url-input" placeholder="请在这里输入website网址">
+                        <button id="goto_button" class="go-button">浏览/Go To Website</button>
+                    </div>
                     <div class="item-tit">
                         <strong>搜索引擎</strong>
                     </div>
