--- a/index.html
+++ b/index.html
@@ -15,6 +15,50 @@
 
 <!--CSS 若不需要变动样式不用改-->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/zui/1.8.1/css/zui.min.css" rel="stylesheet" type="text/css"/>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+  }
+  .url-input-container {
+    margin: 20px 0;
+    font-size: 18px;
+    text-align: center;
+  }
+  .url-input {
+    width: 80%;
+    padding: 10px;
+    margin-right: 5px;
+  }
+  .go-button {
+    padding: 10px 20px;
+  }
+  .search-container,
+  .social-container,
+  .tools-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    background-color: #f0f0f0;
+    border: 1px solid #ddd;
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .button:hover {
+    background-color: #e9e9e9;
+  }
+  .footer {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 14px;
+  }
+</style>
 <style type="text/css">
 ul {
     padding: 0;
